--- a/rapport.qmd
+++ b/rapport.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Rapport statistique"
-eval: true
+eval: false
 ---
 
 # Rapport statistique
@@ -32,7 +32,7 @@ load("data/hdj_hemato.RData")
 
 ### Caractéristiques des répondants
 
-xxx
+xxxc
 
 ## Résultats
 
