--- a/stat.bib
+++ b/stat.bib
@@ -126,3 +126,15 @@
 	url = {https://CRAN.R-project.org/package=ggridges},
 	year = {2024}
 }
+
+@Article{tidytext,
+    title = {tidytext: Text Mining and Analysis Using Tidy Data Principles in R},
+    author = {Julia Silge and David Robinson},
+    doi = {10.21105/joss.00037},
+    url = {http://dx.doi.org/10.21105/joss.00037},
+    year = {2016},
+    publisher = {The Open Journal},
+    volume = {1},
+    number = {3},
+    journal = {JOSS},
+  }
